# mini-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml
postman/collections/mini-rag/: process.request.yaml  upload.request.yaml  welcome-request api-v1 (health-check).request.yaml
postman/collections/mini-rag/.resources/: definition.yaml
routes/: base.py
src/: .env.example  main.py  pyproject.toml
src/assets/: mini-rag.txt
src/controllers/: BaseController.py  DataController.py  ProjectController.py  processController.py
src/helpers/: config.py
src/models/: BaseDataModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: data_chunk.py  project.py
src/models/enums/: ProcessingEnum.py  ResponseEnums.py
src/routes/: base.py  data.py
src/routes/schemes/: data.py
